// Copyright IBM Corp. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package tx.v1;

option go_package = "github.com/sykesm/batik/pkg/pb/tx/v1;txv1";

// A Party contains a public key credential that can be used to represent an
// owner or an interested party.
message Party {
  bytes public_key = 1;
}

// StateInfo contains structured information about a state that can be utilized
// by the ledger, state store, and validation. It can be used to enumerate
// owners of a state as well as a "kind" that implies the state contract
// implementation and the schema of the associated state.
message StateInfo {
  repeated Party owners = 1;
  string kind = 2;
}

// A State contains the information stored on the ledger. While the contents of
// the state is generally opaque, the info provides ownership and schema
// information that can be inspected during validation.
message State {
  StateInfo info = 1;
  bytes state = 2;
}

// A StateReference is a pointer to an output generated by a previous
// transaction.
message StateReference {
  bytes txid = 1;
  uint64 output_index = 2;
}

// A Parameter is additional context that can be included within a transaction
// to "parameterize" valiation. It holds arbitrary key/value data and can be
// used to express intent (like an operation) or provide additional public data
// for validation.
message Parameter {
  string name = 1;
  bytes value = 2;
}

// A Transaction modifies the ledger by consuming input states and creating
// output states.
message Transaction {
  // Transaction salt is required and must be at least 32 bytes in length.
  bytes salt = 1;

  repeated StateReference inputs = 2;
  repeated StateReference references = 3;
  repeated State outputs = 4;
  repeated Parameter parameters = 5;
  repeated Party required_signers = 6;
}

// A signature holds a signer's public key and its signature over a transaction
// ID.
message Signature {
  bytes public_key = 1;
  bytes signature = 2;
}

// A signed transaction is transaction with attached signatures. The signatures
// should be over the unique transaction ID generated from hashing the
// deterministic marshaling of the transaction.
message SignedTransaction {
  Transaction transaction = 1;
  repeated Signature signatures = 2;
}

